# fast-api-course

./: .env-example  .gitignore  converter.py  main.py  main2.py  requirements.txt  routers.py
introduction/: async_await_sponge_bob.py  main.py  type_hint.py
project_1/: converter.py  main.py  routers.py  schemas.py
project_2/: docker-compose.yaml  pyproject.toml
project_2/app/: main.py
project_2/app/db/: connection.py  models.py
project_2/app/migrations/: env.py
project_2/app/migrations/versions/: 069133c4ecf0_add_categories_table.py  b06cdfd1c4a3_add_product_table.py  c2c55ddff849_updated_table.py
project_2/app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
project_2/app/schemas/: category.py  product.py  user.py
project_2/app/test/: conftest.py
project_2/app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
project_2/app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
project_2/app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
project_2/app/use_cases/: category.py  poc.py  product.py  user.py
