[tool.poetry]
package-mode = false
name = "project-2"
version = "0.1.0"
description = ""
authors = ["carlos1377 <carloseduardoorso1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
pytest = "^8.0.2"
alembic = "^1.13.1"
python-decouple = "^3.8"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
